add docs and scripts
Signed-off-by: Erick Wendel <erick.workspace@gmail.com>

--- a/app-pt02-abstract-factory-builder/package.json
+++ b/app-pt02-abstract-factory-builder/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx browser-sync ."
+    "web": "npx browser-sync .",
+    "cli": "node ui/index.js"
   },
   "keywords": [],
   "author": "",
